If avoiding one component textures, do not attempt to apply color space.

PowerVR drives that have problems with one component textures being
bount to an EGLImage require YUV->RGB conversion to be done early in
software. In that case it's not correct to pass the color space
of the video frame on to the compositor, because it doesn't reflect the
color space of the converted frame. Instead, just reset it to the
identity color space.

Bug: 818072
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.android:android_optional_gpu_tests_rel
Change-Id: I44751300a134d29240217cf80c6a5c663227745d
Reviewed-on: https://chromium-review.googlesource.com/955592
Reviewed-by: ccameron <ccameron@chromium.org>
Commit-Queue: Tobias Sargeant <tobiasjs@chromium.org>
Cr-Commit-Position: refs/heads/master@{#542277}
Former-commit-id: acfaf2092828a876a509906653960b13866d4df1